--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" />
 
-    <title>React ProjectBoard</title>
+    <title>UCO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
